--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../static/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/style.css" rel="stylesheet">
+    <link href="./static/bootstrap.min.css" rel="stylesheet">
+    <link href="./static/style.css" rel="stylesheet">
     <title> Northwest Union 2024 </title>
 </head>
 </head>
@@ -69,8 +69,8 @@
   </nav>
 
   <div class="home" style="position:relative;top:-3rem;overflow-x: hidden;">
-    <img style="width:99vw;margin:0;" src="../static/home/home1.jpg">
-    <img style="width:99vw;margin:0;" src="../static/home/home2.jpg">
+    <img style="width:99vw;margin:0;" src="./static/home/home1.jpg">
+    <img style="width:99vw;margin:0;" src="./static/home/home2.jpg">
   </div>
 
 
@@ -98,7 +98,7 @@
     </div>
   </div>
 </footer>
-<script src="../static/bootstrap.bundle.min.js"></script>
+<script src="./static/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
