--- a/pages/template.html
+++ b/pages/template.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../../static/bootstrap.min.css" rel="stylesheet">
-    <link href="../../static/style.css" rel="stylesheet">
+    <link href="../static/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/style.css" rel="stylesheet">
     <title> Northwest Union 2024 </title>
-</head>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -106,7 +104,7 @@
       </div>
     </div>
   </footer>
-  <script src="../../static/bootstrap.bundle.min.js"></script>
+  <script src="../static/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
