--- a/wiki/menu.html
+++ b/wiki/menu.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <!---- TEAM NAME ---->
-    <a class="navbar-brand" href="#">LZU-MEDICINE-CHINA</a>
+    <a class="navbar-brand" href="#">Northwest-Union</a>
 
     <!---- SMALL SCREEN MENU ICON ---->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,6 @@
           <a class="nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
 
-        <!---- PROJECT ---->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Project
@@ -65,19 +64,10 @@
           </ul>
         </li>
 
-
-        
         <!---- TEAM ---->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="{{ url_for('pages', page='members') }}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Team
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{{ url_for('pages', page='members') }}">Members</a></li>
-            <li><a class="dropdown-item" href="{{ url_for('pages', page='attributions') }}">Attributions</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('pages', page='members') }}">Team</a>
         </li>
-
       </ul>
     </div>
   </div>
