--- a/wiki/pages/parts.html
+++ b/wiki/pages/parts.html
@@ -24,13 +24,13 @@
                     <h4>Usage and Biology</h4>
                     <p>We fused DnaK, a key protein that leads to bacterial persistent resistance, with GLP-1. In the hyperglycemic state, glucose enters the bacteria and is used for aerobic respiration, producing more ATP, which reduces the affinity of ClpB-Dnak and depolymerizes the GLP-1 recombinant protein and releases it outside the cell. In the hypoglycemic state, the ratio of ATP to ADP decreases, the GLP-1 recombinant protein repolymerizes, and extracellular secretion is stopped.</p>
                     <figure class="figure">
-                        <img src="https://static.igem.wiki/teams/5161/parts/image1.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="picture-1" style="width:30vw">
+                        <img src=" /parts/image1.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="picture-1" style="width:30vw">
                         <figcaption class="figure-caption">Dynamic changes in ATP concentrations within bacteria promote the formation and depolymerization of protein precipitate aggregates</figcaption>
                       </figure>
 
                       <h4>Characterization</h4>
                       <figure class="figure">
-                        <img src="https://static.igem.wiki/teams/5161/parts/image2.webp" alt="picture-2"  class="rounded mx-auto d-block figure-img img-fluid rounded" style="width:30vw">
+                        <img src=" /parts/image2.webp" alt="picture-2"  class="rounded mx-auto d-block figure-img img-fluid rounded" style="width:30vw">
                         <figcaption class="figure-caption">Agarose gel electrophoresis: Dnak fragments digested using enzymes
                             
                         </figcaption>
@@ -53,7 +53,7 @@
                     <h4>Usage and Biology</h4>
                     <p>This is a connector that connects the proteins, and it has no effect on the parts to which it is attached. The sequence of the linker is designed for amino acids that do not interact with other amino acid residues. The sequence of the linker is designed for amino acids that do not interact with other amino acid residues. The amino acids glycine and serine are zwitterionic and hydrophilic, and these properties make them good candidates for linker repeats.The length of the connector is important to guarantee the independent function of the two connected parts. When the connector is too short, there may be spatial interference between the parts, and when the connector is too long, it can lead to structural instability. In addition, it is important that Linker has some flexibility.</p>
 
-                    <img alt="picture-3" class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/parts/image3.webp">
+                    <img alt="picture-3" class="rounded mx-auto d-block" src=" /parts/image3.webp">
 
                 </div>
 
@@ -86,12 +86,12 @@
             <p>In the meticulous design of the recombinant sequence, we gave thorough consideration to the positioning of each segment with the intention of optimizing the glucose regulation functionality to the greatest extent. PelB is strategically placed at the N-terminus, as this positioning is crucial for facilitating the efficient secretion of GLP-1. Right after PelB comes the GLP-1 sequence, which acts as the central and essential component for carrying out the primary function of glucose regulation. Following the GLP-1 sequence, we deliberately included a flexible linker peptide sequence, specifically (GGGSGGGSGGGS). This linker sequence is designed to ensure a seamless and smooth transition to the subsequent Dnak sequence, enabling proper interaction and functionality between the adjacent components. After Dnak, we added a 3xFlag tag, which serves a vital purpose in the identification of the recombinant protein expression. This tag allows for easy detection and tracking of the protein during various experimental procedures and analyses. This comprehensive approach to sequence design and verification is essential to guarantee the successful development and application of the recombinant protein in the field of glucose regulation research and related biomedical applications.</p>
 
             <h4>Characterization</h4>
-            <img alt="picture-4" class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/parts/image4.webp">
+            <img alt="picture-4" class="rounded mx-auto d-block" src=" /parts/image4.webp">
 
             <ul>
                 <li>
                     1. The Western blot results clearly demonstrate that the GLP-1 recombinant protein was successfully detected in both the unmodified and DLPC vesicle-encapsulated engineered bacterial supernatants. This finding is of significant importance as it provides evidence of the presence of the target protein in these different sample conditions. The measured molecular weight of the GLP-1 recombinant protein is determined to be in the range of 74 - 76 kDa. This precise molecular weight characterization is crucial for further analysis and understanding of the protein's properties and functions. It allows for comparison with the expected molecular weight based on its amino acid sequence and any post-translational modifications that may occur. Additionally, the knowledge of the protein's molecular weight in this context can assist in identifying potential interactions or conformational changes that might be associated with its encapsulation in the DLPC vesicles compared to its unmodified state in the bacterial supernatants. Overall, these results lay a solid foundation for further investigations into the biological activity, stability, and potential applications of the GLP-1 recombinant protein in various biomedical and research settings.
-                    <img alt="picture-5" class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/parts/image5.webp">
+                    <img alt="picture-5" class="rounded mx-auto d-block" src=" /parts/image5.webp">
 
 
                 </li>
