--- a/wiki/pages/collaboration.html
+++ b/wiki/pages/collaboration.html
@@ -19,14 +19,14 @@
     <li>
       <h3>1. Co-authored the E. coliNissle1917 white paper with eight universities</h3>
       <p>Our team worked with eight Chinese IGEM teams, including PekingHSC and NJTech- China, to introduce in detail the use history, application scenarios, biosafety and market development prospects of EcN (Escherichia coli Nissle 1917). It provides a reliable reference for the general public and related practitioners.</p>
-      <iframe src="https://static.igem.wiki/teams/5161/collaboration/ecn.pdf" frameborder="0" style="width:75vw; height:85vh;margin: 15px;"></iframe>
+      <iframe src=" /collaboration/ecn.pdf" frameborder="0" style="width:75vw; height:85vh;margin: 15px;"></iframe>
 
 
     </li>
     <li>
       <h3>2. Participated in the 11th Conference of China iGEMer Community (hereinafter referred to as CCiC)</h3>
       <p>The Conference of China iGEMer Community is a national exchange meeting independently initiated by the Chinese iGEM participating teams, aiming to provide a platform for the participating iGEM teams and Chinese synthetic biology young enthusiasts to share resources and promote mutual learning and exchanges. This year, our team travelled to Suzhou to participate in the CCIC conference organized by Xi'an Jiaotong-Liverpool University with the theme of "SynBio Nexus".</p>
-      <img  class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/collaboration/image1.webp" alt="picture-1">
+      <img  class="rounded mx-auto d-block" src=" /collaboration/image1.webp" alt="picture-1">
     </li>
     <li>
       <h3>3.lzu&suct</h3>
@@ -37,7 +37,7 @@
       <h3>4．SynBio Challenges</h3>
       <p>The Third Synthetic Biology Innovation Competition, hosted by the Synthetic Biology Branch of the Chinese Society for Biotechnology and jointly organized by the Synthetic Biology Institute of Shenzhen Institute of Technology, the Synthetic Biology Research Institute of Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences, Shenzhen Synthetic Biology Innovation Institute, Shenzhen Synthetic Biology Association, and Shenzhen Engineering Biology Industry Innovation Center, was successfully held from August 8th to August 9th.</p>
       <p>We, along with other teams, shared our latest research achievements and project progress in the field of synthetic biology, discussing methodologies for experimental design, data analysis, and result interpretation. We exchanged insights with numerous participants on various technologies and tools employed in synthetic biology experiments, encompassing gene editing technologies (such as CRISPR), synthetic genomics, metabolic engineering, among others. Through sharing diverse project cases, our team garnered fresh inspiration, potentially leading to the introduction of new concepts or methodologies in our own research endeavors.</p>
-      <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/collaboration/image2.webp" alt="picture-2">
+      <img class="rounded mx-auto d-block" src=" /collaboration/image2.webp" alt="picture-2">
 
     </li>
     <li>
@@ -46,7 +46,7 @@
       <p>The videos we uploaded primarily showcase our project's background, goals, and core values, with the intention of attracting more attention and participation. Through vivid visual effects and clear messaging, we aspire to provide viewers with a deeper understanding of our project.</p>
       <p>The educational videos cover topics related to our project, encompassing technologies, methodologies, and practical case studies. These videos aim to equip viewers with relevant knowledge, enhancing their skills and comprehension.</p>
       <p>This experience has not only elevated the quality of our project but also provided growth and development opportunities for every participant. We look forward to continuing our exploration and innovation on this platform, jointly advancing the sharing of education and knowledge.</p>
-      <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/collaboration/image3.webp" alt="picture-3">
+      <img class="rounded mx-auto d-block" src=" /collaboration/image3.webp" alt="picture-3">
     
     </li>
   </ul>    
