--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -25,7 +25,7 @@
    <p>With the improvement of global living standards, diabetes has gradually risen as one of the major threats to human health. According to its pathogenesis, diabetes can be divided into type 1 diabetes mellitus (T1DM) and type 2 diabetes mellitus (T2DM). The former is mainly due to autoimmune factors leading to the destruction of pancreatic islet β cells, resulting in insulin deficiency; The latter, on the other hand, stems from insulin resistance in the body, leading to a cascade of disorders in glucose and lipid metabolism. According to the World Health Organization (WHO), more than 95% of people with diabetes exhibit symptoms of T2DM, including children. In addition, the incidence of T2DM is increasing every year in various regions of the world. Therefore, it has become an urgent task to find more promising ways to deal with the effects of T2DM.</p>
     
    <figure class="figure">
-    <img alt="picture-2" class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/description/newchange1.webp">
+    <img alt="picture-2" class="rounded mx-auto d-block" src=" /description/newchange1.webp">
     <figcaption class="figure-caption">（Pathogenesis of diabetes）</figcaption>
   </figure>
   </div>
@@ -45,13 +45,13 @@
     <p>Our iGEM team aims to build an enhanced biosynthetic system capable of synthesizing GLP-1 and SCFAs in vivo in a guided manner in a guided manner, maximizing their biological value. We plan to engineer the probiotic strain ECN1917 using an expression vector  (pET28A(+)) with the addition of exogenous BCoAT, GLP-1, and PelB sequences. BCoAT is an acetyl-CoA transferase involved in the biosynthesis of SCFAs. PelB is used to enhance GLP-1 expression.</p>
     
   <figure class="figure">
-    <img alt="picture-2" class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/description/newchange2.webp">
+    <img alt="picture-2" class="rounded mx-auto d-block" src=" /description/newchange2.webp">
     <figcaption class="figure-caption">(Built enhanced biosynthetic systems)</figcaption>
   </figure>
 
     <p>On the other hand, to ensure that the probiotics we designed were able to enter the circulatory system and enrich in specific organs, we designed a delivery system. Essentially, this is a vesicle made up of a DLPC  membrane that is able to penetrate the intestinal epithelial barrier and target organs such as the liver and pancreas.</p>
     <figure class="figure">
-      <img alt="picture-2" class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/description/newchange3.webp">
+      <img alt="picture-2" class="rounded mx-auto d-block" src=" /description/newchange3.webp">
       <figcaption class="figure-caption">(Probiotic delivery system)</figcaption>
     </figure>
 
