--- a/wiki/pages/entrepreneurship.html
+++ b/wiki/pages/entrepreneurship.html
@@ -199,13 +199,13 @@
       quickly set up a cross-department RESEARCH and development team, integrating research and development, marketing,
       sales and other resources, providing a solid guarantee for the smooth implementation of the project.
     </p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image1.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image1.webp"
       alt="picture-1">
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image2.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image2.webp"
       alt="picture-2">
 
     <figure class="figure">
-      <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image3.webp"
+      <img class="rounded mx-auto d-block" src=" /entrepreneurship/image3.webp"
         alt="picture-3">
       <figcaption class="figure-caption">The picture shows the head of the project team attending the meeting in China
         Sanuo Biological Company (the first company in diabetes detection in China)</figcaption>
@@ -243,7 +243,7 @@
       cholesterol production, thereby retaining it on the endoplasmic reticulum. This process effectively regulates the
       intracellular lipid synthesis, allowing the body to maintain a healthier metabolic state in the face of a high-fat
       and high-glucose diet.</p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/chart1.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/chart1.webp"
       alt="chart-1">
     <p>In the development process, we encountered many challenges, such as technical bottlenecks, cost control, user
       experience optimization and so on. However, the team members always maintain a high sense of responsibility and
@@ -1196,7 +1196,7 @@
       should lie in the selection of the right industry and the most attractive competitive position in the industry.
     </p>
 
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image5.jpg"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image5.jpg"
       alt="picture-4">
     <p class="figure-caption" style="text-align: center;">Porters five force model</p>
 
@@ -1493,7 +1493,7 @@
       reproducible experimental results, enabling us to attract new customers while not easily losing the original
       customer resources.</p>
 
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image6.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image6.webp"
       alt="picture-5">
     <p class="figure-caption" style="text-align: center;">Product life cycle curve</p>
 
@@ -1870,7 +1870,7 @@
     <ul>
       <li>
         <h4>1. Novo Nordisk (Novo Nordisk)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image7.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image7.webp"
           alt="picture-6">
         <p>Novo Nordisk is a worlds leading biopharmaceutical company focusing on the treatment of diabetes and other
           metabolic diseases. The company has a strong research and development strength and a rich product line in the
@@ -1887,7 +1887,7 @@
       </li>
       <li>
         <h4>2. Eli Lilly (Eli Lilly and Company)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image8.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image8.webp"
           alt="picture-7">
         <p>Eli Lilly is another world-renowned biopharmaceutical company that also has a deep accumulation in the
           treatment of diabetes and other metabolic diseases. The companys GLP-1 receptor agonist products, such as
@@ -1902,7 +1902,7 @@
       </li>
       <li>
         <h4>3. AstraZeneca (AstraZeneca)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image9.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image9.webp"
           alt="picture-8">
         <p>AstraZeneca is a leading global pharmaceutical company with a product line covering a variety of therapeutic
           areas, including oncology, cardiovascular, respiratory and metabolic diseases. Astrazeneca has also performed
@@ -1918,7 +1918,7 @@
       </li>
       <li>
         <h4>4. AbbVie (AbbVie)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image10.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image10.webp"
           alt="picture-9">
         <p>AbbVie is a global research-based biopharmaceutical company specializing in the fields of immunology,
           oncology, neuroscience, and aesthetics. While AbbVies core business is not directly focused on metabolic
@@ -2077,7 +2077,7 @@
       </table>
 
     </div>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/chart2.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/chart2.webp"
       alt="chart-2">
     <p> Among them, the entrepreneurial team invested in intellectual property rights, fixed assets and capital,
       accounting for 82.16% of the companys shares, used 6.2% equity to absorb 2 million yuan, introduced strategic
@@ -3711,7 +3711,7 @@
 
     <h4> Net present value of investment</h4>
     <p>Net present value of the Project investment:</p>
-    <img class="rounded mx-auto d-block" style="width: 300px;" src="https://static.igem.wiki/teams/5161/entrepreneurship/formula1.webp" alt="formula1">
+    <img class="rounded mx-auto d-block" style="width: 300px;" src=" /entrepreneurship/formula1.webp" alt="formula1">
     <p>Considering the current low cost of capital, as well as the opportunity cost of capital in the same industry and
       the risk of investment and other factors, I takes 10% (the same below), at this time, NPV = 2012 (10,000 yuan),
       much greater than zero. The profitability during the calculation period is very good, and the investment plan is
@@ -3721,7 +3721,7 @@
 
     <h4>Inclusion rate of remuneration</h4>
     <p>The embedded remuneration rate calculated in the cash flow statement is as follows:</p>
-    <img class="rounded mx-auto d-block" style="width: 300px;" src="https://static.igem.wiki/teams/5161/entrepreneurship/formula2.webp" alt="formula1">
+    <img class="rounded mx-auto d-block" style="width: 300px;" src=" /entrepreneurship/formula2.webp" alt="formula1">
     <p>
       i= 12% <br>
       The embedded return rate reaches 12%, which is greater than the capital cost rate of 10% and greater than the
