deploy: bc8061f64ec3e2b3745ccd54f6a024e003a7561d

--- a/entrepreneurship.html
+++ b/entrepreneurship.html
@@ -1,19 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="https://static.igem.wiki/teams/5161/safety-anquan-1.ico"/>
-    <link rel="license" href="https://creativecommons.org/licenses/by/4.0/"/>
-
-    <!-- Bootstrap CSS -->
     <link href="static/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="static/style.css" rel="stylesheet">
 
-    <title>Entrepreneurship | LZU-MEDICINE-CHINA - iGEM 2024</title>
+    <title>Entrepreneurship2024_Northwest_Union</title>
 
 </head>
 <body>
@@ -22,7 +15,7 @@
   <div class="container">
 
     <!---- TEAM NAME ---->
-    <a class="navbar-brand" href="#">LZU-MEDICINE-CHINA</a>
+    <a class="navbar-brand" href="#">Northwest-Union</a>
 
     <!---- SMALL SCREEN MENU ICON ---->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +30,6 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
 
-        <!---- PROJECT ---->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Project
@@ -85,19 +77,10 @@
           </ul>
         </li>
 
-
-        
         <!---- TEAM ---->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="members.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Team
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="members.html">Members</a></li>
-            <li><a class="dropdown-item" href="attributions.html">Attributions</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="members.html">Team</a>
         </li>
-
       </ul>
     </div>
   </div>
@@ -313,13 +296,13 @@
       quickly set up a cross-department RESEARCH and development team, integrating research and development, marketing,
       sales and other resources, providing a solid guarantee for the smooth implementation of the project.
     </p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image1.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image1.webp"
       alt="picture-1">
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image2.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image2.webp"
       alt="picture-2">
 
     <figure class="figure">
-      <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image3.webp"
+      <img class="rounded mx-auto d-block" src=" /entrepreneurship/image3.webp"
         alt="picture-3">
       <figcaption class="figure-caption">The picture shows the head of the project team attending the meeting in China
         Sanuo Biological Company (the first company in diabetes detection in China)</figcaption>
@@ -357,7 +340,7 @@
       cholesterol production, thereby retaining it on the endoplasmic reticulum. This process effectively regulates the
       intracellular lipid synthesis, allowing the body to maintain a healthier metabolic state in the face of a high-fat
       and high-glucose diet.</p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/chart1.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/chart1.webp"
       alt="chart-1">
     <p>In the development process, we encountered many challenges, such as technical bottlenecks, cost control, user
       experience optimization and so on. However, the team members always maintain a high sense of responsibility and
@@ -1310,7 +1293,7 @@
       should lie in the selection of the right industry and the most attractive competitive position in the industry.
     </p>
 
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image5.jpg"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image5.jpg"
       alt="picture-4">
     <p class="figure-caption" style="text-align: center;">Porters five force model</p>
 
@@ -1607,7 +1590,7 @@
       reproducible experimental results, enabling us to attract new customers while not easily losing the original
       customer resources.</p>
 
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image6.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/image6.webp"
       alt="picture-5">
     <p class="figure-caption" style="text-align: center;">Product life cycle curve</p>
 
@@ -1984,7 +1967,7 @@
     <ul>
       <li>
         <h4>1. Novo Nordisk (Novo Nordisk)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image7.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image7.webp"
           alt="picture-6">
         <p>Novo Nordisk is a worlds leading biopharmaceutical company focusing on the treatment of diabetes and other
           metabolic diseases. The company has a strong research and development strength and a rich product line in the
@@ -2001,7 +1984,7 @@
       </li>
       <li>
         <h4>2. Eli Lilly (Eli Lilly and Company)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image8.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image8.webp"
           alt="picture-7">
         <p>Eli Lilly is another world-renowned biopharmaceutical company that also has a deep accumulation in the
           treatment of diabetes and other metabolic diseases. The companys GLP-1 receptor agonist products, such as
@@ -2016,7 +1999,7 @@
       </li>
       <li>
         <h4>3. AstraZeneca (AstraZeneca)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image9.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image9.webp"
           alt="picture-8">
         <p>AstraZeneca is a leading global pharmaceutical company with a product line covering a variety of therapeutic
           areas, including oncology, cardiovascular, respiratory and metabolic diseases. Astrazeneca has also performed
@@ -2032,7 +2015,7 @@
       </li>
       <li>
         <h4>4. AbbVie (AbbVie)</h4>
-        <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/image10.webp"
+        <img class="rounded mx-auto d-block" src=" /entrepreneurship/image10.webp"
           alt="picture-9">
         <p>AbbVie is a global research-based biopharmaceutical company specializing in the fields of immunology,
           oncology, neuroscience, and aesthetics. While AbbVies core business is not directly focused on metabolic
@@ -2191,7 +2174,7 @@
       </table>
 
     </div>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/entrepreneurship/chart2.webp"
+    <img class="rounded mx-auto d-block" src=" /entrepreneurship/chart2.webp"
       alt="chart-2">
     <p> Among them, the entrepreneurial team invested in intellectual property rights, fixed assets and capital,
       accounting for 82.16% of the companys shares, used 6.2% equity to absorb 2 million yuan, introduced strategic
@@ -3825,7 +3808,7 @@
 
     <h4> Net present value of investment</h4>
     <p>Net present value of the Project investment:</p>
-    <img class="rounded mx-auto d-block" style="width: 300px;" src="https://static.igem.wiki/teams/5161/entrepreneurship/formula1.webp" alt="formula1">
+    <img class="rounded mx-auto d-block" style="width: 300px;" src=" /entrepreneurship/formula1.webp" alt="formula1">
     <p>Considering the current low cost of capital, as well as the opportunity cost of capital in the same industry and
       the risk of investment and other factors, I takes 10% (the same below), at this time, NPV = 2012 (10,000 yuan),
       much greater than zero. The profitability during the calculation period is very good, and the investment plan is
@@ -3835,7 +3818,7 @@
 
     <h4>Inclusion rate of remuneration</h4>
     <p>The embedded remuneration rate calculated in the cash flow statement is as follows:</p>
-    <img class="rounded mx-auto d-block" style="width: 300px;" src="https://static.igem.wiki/teams/5161/entrepreneurship/formula2.webp" alt="formula1">
+    <img class="rounded mx-auto d-block" style="width: 300px;" src=" /entrepreneurship/formula2.webp" alt="formula1">
     <p>
       i= 12% <br>
       The embedded return rate reaches 12%, which is greater than the capital cost rate of 10% and greater than the
@@ -3867,7 +3850,6 @@
     
   </div>
 
-  <!-- Footer: MUST mention license AND have a link to team wiki's repository on gitlab.igem.org -->
   <footer class="pt-5 pb-5 footer py-5 mt-5 bg-dark text-white">
   <div class="container">
     <div class="row mb-4">
@@ -3875,32 +3857,22 @@
         <h4 class="mb-3">About Us</h4>
         <div class="row">
           <div class="col-lg-6 col-xs-12 text-center">
-            <img src="https://static.igem.wiki/teams/4156/wiki/logo-lzu.png" height="100px" class="mr-4">
+            <img src=" /logo-lzu.png" height="100px" class="mr-4">
             <a>Lanzhou University</a>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 col-xs-12" style="    position: relative;
     left: 45px;">
-            <img src="https://static.igem.wiki/teams/5161/footer/footerlogo2.png" height="100px" class="mr-4">
+            <img src=" /footer/footerlogo2.png" height="100px" class="mr-4">
             <a>School of Stomatology Lanzhou University</a>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 col-xs-12" style="    position: relative;
     left: 45px;">
-            <img src="https://static.igem.wiki/teams/5161/footer/footer.png" height="100px" class="mr-4">
+            <img src=" /footer/footer.png" height="100px" class="mr-4">
             <a>School of Stomatology Lanzhou University</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 col-xs-12 text-center">
-            <img src="https://static.igem.wiki/teams/4156/wiki/logo-impact-small.png" height="100px" class="mr-4">
-            <a>Research Corporation Technologies</a>
-          </div>
-          <div class="col-lg-6 col-xs-12">
-            <img src="https://static.igem.wiki/teams/4156/wiki/matlab-logo.png" height="100px" class="mr-4">
-            <a>Matlab</a>
           </div>
         </div>
       </div>
@@ -3909,14 +3881,6 @@
         <h4 class="mt-lg-0 mt-sm-4 mb-3">Contact</h4>
         <p>No. 222, Tianshui South Road, Chengguan District, Lanzhou City, Gansu Province,730000, P. R. China.</p>
         <p><b>E-mail:</b> <a href="mailto:11@lzu.edu.cn">susu2969@foxmail.com</a></p>
-      </div>
-    </div>
-    <hr>
-    <!-- The following MUST be on every page: license information and link to the repository on gitlab.igem.org -->
-    <div class="row mt-4">
-      <div class="col">
-        <p class="mb-0"><small>© 2024 - Content on this site is licensed under a <a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 International license</a>.</small></p>
-	      <p><small>The repository used to create this website is available at <a href="https://gitlab.igem.org/2024/lzu-medicine-china">gitlab.igem.org/2024/lzu-medicine-china</a>.</small></p>
       </div>
     </div>
   </div>
