--- a/notebook.html
+++ b/notebook.html
@@ -1,19 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="https://static.igem.wiki/teams/5161/safety-anquan-1.ico"/>
-    <link rel="license" href="https://creativecommons.org/licenses/by/4.0/"/>
-
-    <!-- Bootstrap CSS -->
     <link href="static/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="static/style.css" rel="stylesheet">
 
-    <title>Notebook | LZU-MEDICINE-CHINA - iGEM 2024</title>
+    <title>Notebook2024_Northwest_Union</title>
 
 </head>
 <body>
@@ -22,7 +15,7 @@
   <div class="container">
 
     <!---- TEAM NAME ---->
-    <a class="navbar-brand" href="#">LZU-MEDICINE-CHINA</a>
+    <a class="navbar-brand" href="#">Northwest-Union</a>
 
     <!---- SMALL SCREEN MENU ICON ---->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +30,6 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
 
-        <!---- PROJECT ---->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Project
@@ -85,19 +77,10 @@
           </ul>
         </li>
 
-
-        
         <!---- TEAM ---->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="members.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Team
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="members.html">Members</a></li>
-            <li><a class="dropdown-item" href="attributions.html">Attributions</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="members.html">Team</a>
         </li>
-
       </ul>
     </div>
   </div>
@@ -151,7 +134,7 @@
 
     <h2>Others</h2>
     <p>Our division of labor schedule.</p>
-    <img style=" width:60vw"alt="picture-9" class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/notebook/notebook.webp">
+    <img style=" width:60vw"alt="picture-9" class="rounded mx-auto d-block" src=" /notebook/notebook.webp">
 
   </div>
 </div>
@@ -162,7 +145,6 @@
     
   </div>
 
-  <!-- Footer: MUST mention license AND have a link to team wiki's repository on gitlab.igem.org -->
   <footer class="pt-5 pb-5 footer py-5 mt-5 bg-dark text-white">
   <div class="container">
     <div class="row mb-4">
@@ -170,32 +152,22 @@
         <h4 class="mb-3">About Us</h4>
         <div class="row">
           <div class="col-lg-6 col-xs-12 text-center">
-            <img src="https://static.igem.wiki/teams/4156/wiki/logo-lzu.png" height="100px" class="mr-4">
+            <img src=" /logo-lzu.png" height="100px" class="mr-4">
             <a>Lanzhou University</a>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 col-xs-12" style="    position: relative;
     left: 45px;">
-            <img src="https://static.igem.wiki/teams/5161/footer/footerlogo2.png" height="100px" class="mr-4">
+            <img src=" /footer/footerlogo2.png" height="100px" class="mr-4">
             <a>School of Stomatology Lanzhou University</a>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 col-xs-12" style="    position: relative;
     left: 45px;">
-            <img src="https://static.igem.wiki/teams/5161/footer/footer.png" height="100px" class="mr-4">
+            <img src=" /footer/footer.png" height="100px" class="mr-4">
             <a>School of Stomatology Lanzhou University</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 col-xs-12 text-center">
-            <img src="https://static.igem.wiki/teams/4156/wiki/logo-impact-small.png" height="100px" class="mr-4">
-            <a>Research Corporation Technologies</a>
-          </div>
-          <div class="col-lg-6 col-xs-12">
-            <img src="https://static.igem.wiki/teams/4156/wiki/matlab-logo.png" height="100px" class="mr-4">
-            <a>Matlab</a>
           </div>
         </div>
       </div>
@@ -204,14 +176,6 @@
         <h4 class="mt-lg-0 mt-sm-4 mb-3">Contact</h4>
         <p>No. 222, Tianshui South Road, Chengguan District, Lanzhou City, Gansu Province,730000, P. R. China.</p>
         <p><b>E-mail:</b> <a href="mailto:11@lzu.edu.cn">susu2969@foxmail.com</a></p>
-      </div>
-    </div>
-    <hr>
-    <!-- The following MUST be on every page: license information and link to the repository on gitlab.igem.org -->
-    <div class="row mt-4">
-      <div class="col">
-        <p class="mb-0"><small>© 2024 - Content on this site is licensed under a <a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 International license</a>.</small></p>
-	      <p><small>The repository used to create this website is available at <a href="https://gitlab.igem.org/2024/lzu-medicine-china">gitlab.igem.org/2024/lzu-medicine-china</a>.</small></p>
       </div>
     </div>
   </div>
