--- a/sustainable.html
+++ b/sustainable.html
@@ -1,19 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="https://static.igem.wiki/teams/5161/safety-anquan-1.ico"/>
-    <link rel="license" href="https://creativecommons.org/licenses/by/4.0/"/>
-
-    <!-- Bootstrap CSS -->
     <link href="static/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="static/style.css" rel="stylesheet">
 
-    <title>Sustainability | LZU-MEDICINE-CHINA - iGEM 2024</title>
+    <title>Sustainability2024_Northwest_Union</title>
 
 </head>
 <body>
@@ -22,7 +15,7 @@
   <div class="container">
 
     <!---- TEAM NAME ---->
-    <a class="navbar-brand" href="#">LZU-MEDICINE-CHINA</a>
+    <a class="navbar-brand" href="#">Northwest-Union</a>
 
     <!---- SMALL SCREEN MENU ICON ---->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +30,6 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
 
-        <!---- PROJECT ---->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Project
@@ -85,19 +77,10 @@
           </ul>
         </li>
 
-
-        
         <!---- TEAM ---->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="members.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Team
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="members.html">Members</a></li>
-            <li><a class="dropdown-item" href="attributions.html">Attributions</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="members.html">Team</a>
         </li>
-
       </ul>
     </div>
   </div>
@@ -121,10 +104,10 @@
 
 <div class="row mt-4">
   <div class="col">
-    <img src="https://static.igem.wiki/teams/5161/sustainability/image10.webp" alt="picture-1">
+    <img src=" /sustainability/image10.webp" alt="picture-1">
     <p>The United Nations Sustainable Development Goals (SDGs) are 17 global development goals set by the United Nations, aimed at comprehensively addressing social, economic, and environmental development issues from 2015 to 2030, and shifting towards a sustainable development path. </p>
     <p>Our project has developed an innovative health product through the application of cutting-edge genetic engineering and other technologies, aiming to precisely control cholesterol absorption by modifying the genetic structure of Escherichia coli, thereby reducing the risk of hypercholesterolemia.  This project is highly aligned with SDGs at multiple levels and has profound sustainable development significance, not only reflected in its positive impact on human health, but also encompassing various aspects such as economy, society and technology factors. </p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/sustainability/image11.webp" alt="picture-2">
+    <img class="rounded mx-auto d-block" src=" /sustainability/image11.webp" alt="picture-2">
   </div>
 </div>
 
@@ -134,22 +117,22 @@
     <hr>
     <h3>SDG1:No Poverty </h3>
     <p>Indirect contribution: Poverty has multiple dimensions of causes, including unemployment, social exclusion, and the vulnerability of certain populations to disasters, diseases, and other phenomena that prevent them from engaging in productive activities.  Although the direct goal of the project is not to eradicate poverty, by improving public health, especially reducing the risk of poverty caused by health problems such as cardiovascular and cerebrovascular diseases, it indirectly helps to reduce the phenomenon of poverty caused by illness and returning to poverty due to illness, thus having a positive impact on achieving the goal of poverty free. </p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/sustainability/image12.webp" alt="picture-3">
+    <img class="rounded mx-auto d-block" src=" /sustainability/image12.webp" alt="picture-3">
     <h3>SDG3:Good Health and Well-being</h3>
     <p> Direct contribution: In April 2016, the World Health Organization released Global diabetes Report, calling for action to reduce the exposure to known risk factors of type 2 diabetes, and improve the access to care and the quality of care for all forms of diabetes patients.  All types of diabetes cause complications in many parts of the body and increase the overall risk of premature death.  Possible complications include heart attack, stroke, renal failure, leg amputation (due to infection with unhealed foot ulcers), vision loss, and nerve damage.  The project directly aims at health problems, reduces the cholesterol level through innovative health products, reduces the risk of diabetes, cardiovascular and cerebrovascular diseases and other diseases, directly promotes the health and well-being of the public, and is highly compatible with SDG 3.</p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/sustainability/image13.webp" alt="picture-4">
+    <img class="rounded mx-auto d-block" src=" /sustainability/image13.webp" alt="picture-4">
     <h3>SDG4：Quality Education </h3>
     <p> Indirect contribution: Although the project itself does not directly involve the field of education, it indirectly supports the realization of high-quality education by improving public health levels and reducing educational interruptions or quality decline caused by health issues (such as absenteeism due to illness, decreased learning ability, etc.).  In addition, we actively carry out activities to popularize health knowledge, and the public's demand for health education will also increase, promoting the investment and development of relevant educational resources.  We mainly carry out educational practices in multiple locations within Gansu Province, including Lanzhou City, Tianshui City, and Zhouqu County.  The practice includes questionnaire survey to assess the public's awareness of type 2 diabetes, making brochures for different age groups to popularize diabetes knowledge, and carry out free clinic activities in Zhouqu County to screen and consult diabetes.  At the same time, health education activities were organized in the community, especially to popularize diabetes prevention knowledge among young people, and encourage children to participate in indoor sports to promote a healthy lifestyle.  In addition, we also promote educational activities through integrated media centers to increase social attention.</p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/sustainability/image14.webp" alt="picture-5">
+    <img class="rounded mx-auto d-block" src=" /sustainability/image14.webp" alt="picture-5">
     <h3>SDG5：Gender Equality </h3>
     <p>Potential contribution: Although the project primarily focuses on the health sector, gender equality is equally important in the health field.  Ensuring equal access to health services and medical resources for both men and women is a factor we need to consider in our promotion process.  By providing gender neutral health solutions, the project helps promote the achievement of gender equality goals. </p>
-    <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/sustainability/image15.webp" alt="picture-6">
+    <img class="rounded mx-auto d-block" src=" /sustainability/image15.webp" alt="picture-6">
   <h3>SDG10：Reduced Inequalities</h3>
   <p>Indirect contribution: By improving public health, especially focusing on the health needs of vulnerable groups such as low-income individuals and residents in remote areas, we can reduce inequalities caused by health issues in various aspects such as accessing medical resources, disease prevention and treatment, improving health literacy, social integration and mental health, and reducing economic burden. </p>
-  <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/sustainability/image16.webp" alt="picture-7">
+  <img class="rounded mx-auto d-block" src=" /sustainability/image16.webp" alt="picture-7">
   <h3>SDG17：Partnerships for the Goals  </h3>
   <p>Important means: The successful implementation of the project requires cooperation and support from multiple parties such as the government, enterprises, research institutions, and non-governmental organizations.  Establishing extensive partnerships, sharing resources, technology, and experience, and jointly promoting the implementation of projects and achieving goals is the key to sustainable development of projects.  The First Hospital of Lanzhou University will provide us with tremendous support in product sales and work closely with doctors in relevant departments to provide more professional technical guidance in clinical applications.  In addition, we will contact pharmaceutical wholesalers and collaborate with online pharmacies.  </p>
-  <img class="rounded mx-auto d-block" src="https://static.igem.wiki/teams/5161/sustainability/image17.webp" alt="picture-8">
+  <img class="rounded mx-auto d-block" src=" /sustainability/image17.webp" alt="picture-8">
   
   </div>
 </div>
@@ -252,7 +235,6 @@
     
   </div>
 
-  <!-- Footer: MUST mention license AND have a link to team wiki's repository on gitlab.igem.org -->
   <footer class="pt-5 pb-5 footer py-5 mt-5 bg-dark text-white">
   <div class="container">
     <div class="row mb-4">
@@ -260,32 +242,22 @@
         <h4 class="mb-3">About Us</h4>
         <div class="row">
           <div class="col-lg-6 col-xs-12 text-center">
-            <img src="https://static.igem.wiki/teams/4156/wiki/logo-lzu.png" height="100px" class="mr-4">
+            <img src=" /logo-lzu.png" height="100px" class="mr-4">
             <a>Lanzhou University</a>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 col-xs-12" style="    position: relative;
     left: 45px;">
-            <img src="https://static.igem.wiki/teams/5161/footer/footerlogo2.png" height="100px" class="mr-4">
+            <img src=" /footer/footerlogo2.png" height="100px" class="mr-4">
             <a>School of Stomatology Lanzhou University</a>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 col-xs-12" style="    position: relative;
     left: 45px;">
-            <img src="https://static.igem.wiki/teams/5161/footer/footer.png" height="100px" class="mr-4">
+            <img src=" /footer/footer.png" height="100px" class="mr-4">
             <a>School of Stomatology Lanzhou University</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 col-xs-12 text-center">
-            <img src="https://static.igem.wiki/teams/4156/wiki/logo-impact-small.png" height="100px" class="mr-4">
-            <a>Research Corporation Technologies</a>
-          </div>
-          <div class="col-lg-6 col-xs-12">
-            <img src="https://static.igem.wiki/teams/4156/wiki/matlab-logo.png" height="100px" class="mr-4">
-            <a>Matlab</a>
           </div>
         </div>
       </div>
@@ -294,14 +266,6 @@
         <h4 class="mt-lg-0 mt-sm-4 mb-3">Contact</h4>
         <p>No. 222, Tianshui South Road, Chengguan District, Lanzhou City, Gansu Province,730000, P. R. China.</p>
         <p><b>E-mail:</b> <a href="mailto:11@lzu.edu.cn">susu2969@foxmail.com</a></p>
-      </div>
-    </div>
-    <hr>
-    <!-- The following MUST be on every page: license information and link to the repository on gitlab.igem.org -->
-    <div class="row mt-4">
-      <div class="col">
-        <p class="mb-0"><small>© 2024 - Content on this site is licensed under a <a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 International license</a>.</small></p>
-	      <p><small>The repository used to create this website is available at <a href="https://gitlab.igem.org/2024/lzu-medicine-china">gitlab.igem.org/2024/lzu-medicine-china</a>.</small></p>
       </div>
     </div>
   </div>
