modify picture of entrepreneurship

--- a/wiki/pages/entrepreneurship.html
+++ b/wiki/pages/entrepreneurship.html
@@ -3711,7 +3711,7 @@
 
     <h4> Net present value of investment</h4>
     <p>Net present value of the Project investment:</p>
-    <img class="rounded mx-auto d-block" style="width: 300px;" src=" /entrepreneurship/formula1.webp" alt="formula1">
+    <img class="rounded mx-auto d-block" style="width: 300px;" src="{{ url_for('static', filename = 'entrepreneurship/formula1.webp') }}" alt="formula1">
     <p>Considering the current low cost of capital, as well as the opportunity cost of capital in the same industry and
       the risk of investment and other factors, I takes 10% (the same below), at this time, NPV = 2012 (10,000 yuan),
       much greater than zero. The profitability during the calculation period is very good, and the investment plan is
@@ -3721,9 +3721,8 @@
 
     <h4>Inclusion rate of remuneration</h4>
     <p>The embedded remuneration rate calculated in the cash flow statement is as follows:</p>
-    <img class="rounded mx-auto d-block" style="width: 300px;" src=" /entrepreneurship/formula2.webp" alt="formula1">
+    <img class="rounded mx-auto d-block" style="width: 300px;" src="{{ url_for('static', filename = 'entrepreneurship/formula2.webp') }}" alt="formula1">
     <p>
-      i= 12% <br>
       The embedded return rate reaches 12%, which is greater than the capital cost rate of 10% and greater than the
       embedded return rate of 8% in the same industry, mainly because of the high quality and low price of the product,
       the sales profit margin is high. Moreover, the market growth in the first five years is very good.
