modify contribution image1

--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -21,7 +21,7 @@
     <p>To introduce a more diverse array of glycemic regulation mechanisms, we utilized ECN1917 as a chassis and introduced novel components encoding the Bcoat gene (β-carboxyl-CoA transferase gene), along with segments that confer the ability to secrete GLP-1. 
       This modulation aims to regulate the gut microbiota, thereby enhancing the synthesis of short-chain fatty acids (SCFAs) in the intestinal environment and promoting GLP-1 secretion to indirectly modulate blood glucose levels.
       </p>
-      <img alt="picture-1" class="rounded mx-auto d-block" src="{{ url_for('static', filename = 'contributions/image1webp') }}">
+      <img alt="picture-1" class="rounded mx-auto d-block" src="{{ url_for('static', filename = 'contributions/image1.webp') }}">
 
   </div>
 </div>
