hardware-and-notebook

--- a/wiki/pages/notebook.html
+++ b/wiki/pages/notebook.html
@@ -37,7 +37,7 @@
 
     <h2>Others</h2>
     <p>Our division of labor schedule.</p>
-    <img style=" width:60vw"alt="picture-9" class="rounded mx-auto d-block" src=" /notebook/notebook.webp">
+    <img style=" width:60vw"alt="picture-9" class="rounded mx-auto d-block" src="{{ url_for('static', filename = '/notebook/image1.webp') }}">
 
   </div>
 </div>
