deploy: 951f41a03d74f321074205ab3f458be8854cf47e

--- a/hardware.html
+++ b/hardware.html
@@ -134,8 +134,8 @@
       <p>Transmission electron microscopy (TEM) images of DLPC-encapsulated engineered bacteria were obtained. It can be observed that there is a vesicle-like structure on the outer surface of the engineered bacteria, which corresponds to the DLPC membrane. When the engineered bacteria and DLPC-encapsulated engineered bacteria were separately plated on L.B. solid agar plates, it was evident that the engineered bacteria grew normally, while the colony count of the DLPC-encapsulated engineered bacteria was significantly reduced, indicating that the vesicles prevented the majority of the engineered bacteria from proliferating. Viability staining results showed that the DLPC-encapsulated engineered bacteria retained normal activity.
 
       </p>
-     <img alt="picture-1" class="rounded mx-auto d-block" src=" /hardware/image1.webp">
-     <img alt="picture-2" class="rounded mx-auto d-block" src=" /hardware/image2.webp">
+     <img alt="picture-1" class="rounded mx-auto d-block" src="static/hardware/image1.webp">
+     <img alt="picture-2" class="rounded mx-auto d-block" src="static/hardware/image2.webp">
 
     </div>
   </div>
