--- a/notebook.html
+++ b/notebook.html
@@ -134,7 +134,7 @@
 
     <h2>Others</h2>
     <p>Our division of labor schedule.</p>
-    <img style=" width:60vw"alt="picture-9" class="rounded mx-auto d-block" src=" /notebook/notebook.webp">
+    <img style=" width:60vw"alt="picture-9" class="rounded mx-auto d-block" src="static/notebook/image1.webp">
 
   </div>
 </div>
